[package]
name = "get-training-data"
version = "0.1.0"
authors = ["Vedant Roy <vroy101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features=["derive"] }
lazy_static = "1.4.0"
toml = "0.5.8"
serde_yaml = "0.8"
serde_json = "1.0.64"
regex = "1.4.5"
anyhow = "1.0.38"
reqwest = "0.11.2"
futures = "0.3.13"
kuchiki = "0.8.1"
log = "0.4.14"
env_logger = "0.8.3"
fasthash = "0.4.0"
url = "2.2.1"

# bloom deps
bincode = "1.3.2"
bloomfilter = { version = "1.0.5", features = ["serde"] }
